--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,4 +1,12 @@
 <h1><%= @cocktail.name %></h1>
+<h5>Doses</h5>
+<ul>
+  <% @doses.each do |dose| %>
+    <li>
+      <%= dose.description %> of <%= dose.ingredient.name %> 
+    </li>
+  <% end %>
+</ul>
 <%= simple_form_for [@cocktail, @dose] do |f| %>
   <%= f.input :description %>
   <%= f.association :ingredient %>
